# GitIQ

./: README.md
backend/: README.md  db.py  insights.py  main.py  pyproject.toml
backend/app/routers/: analysis.py  auth.py  health.py
backend/app/services/: analysis_service.py  github_service.py  insights_service.py  repo_insights_service.py  supabase_service.py
backend/models/: requestModels.py  responseModels.py
frontend/: .env  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Analyze.jsx  AuthPanel.jsx  DetailAnalysis.jsx  InsightCharts.jsx  InsightsPanel.jsx  PinnedReposPanel.jsx  RepoAnalysisDetail.jsx  SearchPanel.jsx  SummaryPanel.jsx  TopicsPanel.jsx  UsernameForm.jsx
